--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "core-js": "^3.6.4",
+    "moment": "^2.25.3",
     "roboto-fontface": "*",
     "vue": "^2.6.11",
     "vue-router": "^3.1.6",
